--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>odin recipes</h1>
-    <img src="images/homer.gif" width="auto" height="150px">
+    <img src="./images/homer.gif" width="auto" height="150px">
     <ul>
         <li> <a href="recipes/khachapuri.html">khachapuri</a> </li> 
         <li> <a href="recipes/elarji.html">elarji</a> </li>
